Bug 1036288 - Fix search box to 2 columns width instead of stretching all the way [r=adw] Make the search as big as possible but contained within 2 columns.
UltraBlame original commit: 5ff842db2ba7857a11e2bb06b42106378fe533dd

--- a/browser/base/content/newtab/newTab.css
+++ b/browser/base/content/newtab/newTab.css
@@ -255,10 +255,12 @@ input[type=button] {
 
 #newtab-search-form {
   display: -moz-box;
+  -moz-box-flex: 1;
   -moz-box-orient: horizontal;
   -moz-box-align: center;
   height: 44px; 
-  margin-bottom: 10px; 
+  margin: 0 20px 10px; 
+  max-width: 600px; 
 }
 
 #newtab-search-logo {
